# MASKING

./: LICENSE  README.md  mask.py  setup.cfg  setup.py
archive/: README.md  maskstring.py
src/masking.egg-info/: PKG-INFO  SOURCES.txt
