[metadata]
# replace with your username:
name = masking
version = 0.0.3
author = Sangram Mohanty
author_email = odisha532@hotmail.com
description = This package contains a function 'maskstring' to mask a given input string based on the index positions passed as arguments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sangram11/MASKING
project_urls =
    Bug Tracker = https://github.com/sangram11/MASKING/tree/master/archive
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src